line-smt-apis/force-app/main/default/objects/Dealer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>地址</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>區域</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>南</fullName>
                </value>
                <value>
                    <fullName>東</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>縣市</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>台北市</fullName>
                </value>
                <value>
                    <fullName>新北市</fullName>
                </value>
                <value>
                    <fullName>基隆市</fullName>
                </value>
                <value>
                    <fullName>宜蘭縣</fullName>
                </value>
                <value>
                    <fullName>桃園市</fullName>
                </value>
                <value>
                    <fullName>新竹縣</fullName>
                </value>
                <value>
                    <fullName>新竹市</fullName>
                </value>
                <value>
                    <fullName>苗栗縣</fullName>
                </value>
                <value>
                    <fullName>台中市</fullName>
                </value>
                <value>
                    <fullName>彰化縣</fullName>
                </value>
                <value>
                    <fullName>南投縣</fullName>
                </value>
                <value>
                    <fullName>雲林縣</fullName>
                </value>
                <value>
                    <fullName>嘉義縣</fullName>
                </value>
                <value>
                    <fullName>嘉義市</fullName>
                </value>
                <value>
                    <fullName>台南市</fullName>
                </value>
                <value>
                    <fullName>高雄市</fullName>
                </value>
                <value>
                    <fullName>屏東縣</fullName>
                </value>
                <value>
                    <fullName>花蓮縣</fullName>
                </value>
                <value>
                    <fullName>台東縣</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>經銷商代碼</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DealerSystemCode__c</fullName>
        <label>經銷體系代碼</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerSystemName__c</fullName>
        <label>經銷體系名稱</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPSlLngLat__c</fullName>
        <label>GPS經緯度</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PhotoURL__c</fullName>
        <label>圖片URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ServiceHours__c</fullName>
        <label>服務時間</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>電話</label>
        <type>Phone</type>
    </fields>
    <label>經銷商</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DealerCode__c</columns>
        <columns>DealerSystemCode__c</columns>
        <columns>DealerSystemName__c</columns>
        <columns>Area__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>經銷商名稱</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>